refactor: adjust the movie and user templates

--- a/system/templates/users/users-list.html
+++ b/system/templates/users/users-list.html
@@ -1,16 +1,16 @@
 <div class="outter-div">
     <table class="outter-table">
         <caption class="table-caption">
-            Listagem de usuários
+            Users list
         </caption>
         
         <thead>
             <tr class="table-row table-row-header">
-                <th class="table-header">id</th>
-                <th class="table-header">nome</th>
-                <th class="table-header">sobrenome</th>
+                <th class="table-header">ID</th>
+                <th class="table-header">Name</th>
+                <th class="table-header">Last name</th>
                 <th class="table-header">email</th>
-                <th class="table-header">telefone</th>
+                <th class="table-header">phone number</th>
             </tr>
         </thead>
         <tbody>
