feat: stylize head, header and footer in the base templates

--- a/system/templates/users/users-list.html
+++ b/system/templates/users/users-list.html
@@ -9,8 +9,8 @@
                 <th class="table-header">ID</th>
                 <th class="table-header">Name</th>
                 <th class="table-header">Last name</th>
-                <th class="table-header">email</th>
-                <th class="table-header">phone number</th>
+                <th class="table-header">Email</th>
+                <th class="table-header">Phone number</th>
             </tr>
         </thead>
         <tbody>
@@ -20,7 +20,7 @@
                     <td class="table-cel">{{user.name}}</td>
                     <td class="table-cel">{{user.last_name}}</td>
                     <td class="table-cel">{{user.email}}</td>
-                    <td class="table-cel">{{user.phone_numer}}</td>
+                    <td class="table-cel">{{user.phone_number}}</td>
                 </tr>
             {% endfor %}
         </tbody>
