feat: include some global stiles

--- a/user/templates/user-register.html
+++ b/user/templates/user-register.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container-register"></div>
     <h1>User register</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
