--- a/base_templates/partials/_footer.html
+++ b/base_templates/partials/_footer.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <footer>
     <div class="footer">
         <div class="footer-section">
@@ -79,7 +81,7 @@
     </div>
 
     <div class="footer-botton">
-        <p>©2025 Stream, Allrights reserved</p>
+        <p>©2025 StreamVibe, Allrights reserved</p>
 
         <ul class="footer-links">
             <li>Terms of use</li>
@@ -87,107 +89,4 @@
             <li>Cookies policy</li>
         </ul>
     </div>
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        .body {
-            font-family: sans-serif;
-        }
-
-        .footer {
-            display: flex;
-            flex-wrap: wrap;
-            background-color: #111;
-            color: #fff;
-            justify-content: space-between;
-            padding: 40px 60px;
-            border-bottom: 1px solid #222;
-        }
-
-        .footer-section {
-            margin-bottom: 30px;
-            min-width: 150px;
-        }
-
-        .title-section {
-            font-size: 1.2rem;
-            color: #fff;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-
-        .list-section {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .list-section li {
-            font-size: 0.95rem;
-            margin-bottom: 10px;
-            color: #ccc;
-            cursor: pointer;
-        }
-
-        .list-section li:hover{
-            text-decoration: underline;
-        }
-
-        .social-icons{
-            display: flex;
-            gap: 14px;
-            margin-top: 10px;
-        }
-        
-        .social-btn {
-            width: 36px;
-            height: 36px;
-            background-color: #1a1a1a;
-            border: 1px solid #2c2c2c;
-            border-radius: 6px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-        }
-
-        .social-btn:hover {
-            background-color: #333;
-        }
-        
-        .footer-botton {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            background-color: #222;
-            align-items: center;
-            padding: 20px 60px;
-            font-size: 0.85rem;
-            color: #aaa;
-        }
-
-        .footer-links {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-            margin: 0;
-            padding: 0;
-            border-left: 1px solid #333;
-        }
-
-        .footer-links li {
-            padding-left: 20px;
-            color: #ccc;
-            cursor: pointer;
-
-        }
-
-        .footer-links li:hover {
-            text-decoration: underline;
-        }
-    </style>
 </footer>
