--- a/user/templates/user-login.html
+++ b/user/templates/user-login.html
@@ -1,1 +1,96 @@
-<h1>User login</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ {% include "partials/_head.html" %}
+</head>
+    <body>
+        <header>{% include "partials/_header.html" %}</header>
+        <main class="body-login">
+            <div class="container-login">
+                <h2>Be welcome</h2>
+                <p>Inform you credentials to evaluate your favorite movies and shows.</p>
+
+                <form action="POST" class="form-login">
+                    <input type="email" placeholder="E-mail" required>
+                    <input type="password" placeholder="Password" required>
+                </form>
+                <button class="primary-btn" type="submit">Login</button>
+
+                <p class="footer-login">
+                    Don't have any account?
+                    <a href="">Register here</a>
+                </p>
+            </div>
+
+            <style>
+                .body-login {
+                    background-color: #0e0e10;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 500px;
+                }
+
+                .container-login {
+                    background-color: #1a1a1d;
+                    padding: 48px;
+                    box-shadow: 0 0 200px rgba(176, 6, 16, 1);
+                    text-align: center;
+                    max-width: 500px;
+                }
+
+                .container-login h2 {
+                    margin-bottom: 8px;
+                    font-size: 32px;
+                }
+
+                .container-login p {
+                    color: #bbb;
+                    margin-bottom: 32px;
+                }
+
+                .form-login input {
+                    display: block;
+                    width: 100%;
+                    padding: 6px;
+                    border-radius: 8px;
+                    margin-bottom: 10px;
+                    border: none;
+                    background-color: #2c2c31;
+                    color: #fff;
+                }
+
+                .primary-btn {
+                    background-color: #e50914;
+                    color: #fff;
+                    padding: 10px;
+                    border-radius: 8px;
+                    padding: 12px 24px;
+                    border: none;
+                    cursor: pointer;
+                    font-weight: bold;
+                    margin-top: 10px;
+                }
+
+                .primary-btn:hover {
+                    background-color: #b00610;
+                }
+
+                footer.login{
+                    margin-top: 20x;
+                    color: #aaa;
+                    font-size: 14px;
+                }
+
+                footer.login a {
+                    text-decoration: none;
+                    color: #e50914;
+                }
+            </style>
+        </main>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        
+
+        <footer>{% include "partials/_footer.html" %}</footer>
+    </body>
+</html>
